--- a/01_main_problem_no_bounderys.ipynb
+++ b/01_main_problem_no_bounderys.ipynb
@@ -45,8 +45,12 @@
     "<br> \n",
     "\n",
     "Um das PINA-Model zu testen werden wir folgende vorberechnete Werte verwenden: `Input` { $\\sigma_t$ ; $\\Delta\\epsilon$ }, `Output` { $\\sigma_{t+1}$ }.\n",
-    "\n",
-    "## Einstellungen"
+    "<br>\n",
+    "### Variablendeklaration\n",
+    "- $\\sigma_t$ = `sigma_0`\n",
+    "- $\\Delta\\epsilon$ = `delta_epsilon`\n",
+    "- $\\sigma_{t+1}$ = `sigma_1`\n",
+    "## Einstellungen und Utilities"
    ]
   },
   {
@@ -58,7 +62,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a25c871e51624649a2fccad7293f9c46",
+       "model_id": "ee834606546d43a7b6e62f3b1ddb5381",
        "version_major": 2,
        "version_minor": 0
       },
@@ -72,7 +76,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "40bc1bb8a177414683612008be848f28",
+       "model_id": "fd8c28d9756245789da1872628506eb8",
        "version_major": 2,
        "version_minor": 0
       },
@@ -86,7 +90,7 @@
    ],
    "source": [
     "import ipywidgets as widgets\n",
-    "from IPython.display import display\n",
+    "from IPython.display import display, Markdown\n",
     "\n",
     "# Checkbox erstellen\n",
     "debug_mode = widgets.Checkbox(\n",
@@ -103,7 +107,7 @@
     "\n",
     "# Checkbox anzeigen\n",
     "display(debug_mode)\n",
-    "display(normalize_data)\n"
+    "display(normalize_data)"
    ]
   },
   {
@@ -310,7 +314,7 @@
     "    print(f' sigma_0: {sigma_0_train.size()}')\n",
     "    print(f' delta_epsilon: {delta_epsilon_train.shape}')\n",
     "    print(f' sigma_0 und delta_epsilon combined: {input_points_combined.size()}')\n",
-    "    print(f' sigma_1: {sigma_1_train.shape}')\n"
+    "    print(f' sigma_1: {sigma_1_train.shape}')"
    ]
   },
   {
@@ -326,7 +330,7 @@
     "- **Definitionsbereich (`domain`)**: Der Wertebereich der Eingabevariablen (`sigma_0`, `delta_epsilon`) wird als `CartesianDomain` festgelegt.\n",
     "    - **Hinweis:** `domain` muss immer definiert sein, selbst wenn sie nicht direkt zur Datengenerierung verwendet wird.  \n",
     "    - [PINA-Dokumentation - CartesianDomain](https://mathlab.github.io/PINA/_rst/geometry/cartesian.html) \n",
-    "- **Randbedingungen (`conditions`)**: Die echten Messwerte (`sigma_1_train`) werden als Randbedingung (`Condition`) für das Modell definiert.\n",
+    "- **Randbedingungen (`conditions`)**: Die echten Messwerte (`in sigma_0, delta_epsilon` `out sigma_1_train`) werden als Randbedingung (`Condition`) für das Modell definiert.\n",
     "    - [PINA-Dokumentation - Condition](https://mathlab.github.io/PINA/_rst/condition.html) \n",
     "- **\"Wahre Lösung\" (`truth_solution`)**: Falls erforderlich, kann eine analytische Lösung (hier `torch.exp(...)`) zur Validierung genutzt werden.\n",
     "    - **Hinweis:** Funktioniert in unserem Fall nicht, da die Implementierung nicht für reine Input und Outpunkt Punkte implementiert ist.\n",
@@ -496,7 +500,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 6,
    "id": "8177115081d371bf",
    "metadata": {
     "ExecuteTime": {
@@ -504,25 +508,52 @@
      "start_time": "2025-03-12T08:30:32.818773Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/markdown": [
+       "![Result of sampling](./graph/visual_sampling.png)"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Markdown object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "from pina import Plotter\n",
     "\n",
     "pl = Plotter()\n",
-    "pl.plot_samples(problem=problem, filename='./graph/visual_sampling.png', variables=['delta_epsilon','sigma_0'])"
+    "pl.plot_samples(problem=problem, filename='./graph/visual_sampling.png', variables=['delta_epsilon','sigma_0'])\n",
+    "display(Markdown('![Result of sampling](./graph/visual_sampling.png)'))"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "ef2f6bff-b204-4fee-bb31-e02641eb9fea",
+   "id": "98b78c6b-22bf-4a9a-8d00-be05b47deb71",
    "metadata": {},
    "source": [
-    "![Result of sampling](./graph/visual_sampling.png)"
+    "## **Training eines Physics-Informed Neural Networks (PINN) mit PINA**\n",
+    "\n",
+    "Dieser Code definiert und trainiert ein **Physics-Informed Neural Network (PINN)** zur Lösung des Problems in PINA.\n",
+    "\n",
+    "- **Modell (`FeedForward`)**: Ein neuronales Netz mit drei versteckten Schichten (`[50, 50, 50]`), das mit der ReLU-Aktivierungsfunktion arbeitet.\n",
+    "- **PINN-Objekt (`PINN`)**: Erstellt das PINN-Modell, das die physikalischen Randbedingungen des Problems berücksichtigt.\n",
+    "- **TensorBoard-Logger (`TensorBoardLogger`)**: Speichert Trainingsmetriken zur Visualisierung.\n",
+    "- **Trainer (`Trainer`)**: Führt das Training für 1500 Epochen mit Batch-Größe 10 durch.\n",
+    "- **Training starten (`trainer.train()`)**: Startet den Optimierungsprozess und protokolliert die Metriken.\n",
+    "\n",
+    "Am Ende wird die **finale Loss-Funktion** ausgegeben, um die Trainingsqualität zu bewerten.\n",
+    "\n",
+    "**Mehr zu `Trainer`:**  \n",
+    "[PINA-Dokumentation – Trainer](https://mathlab.github.io/PINA/_rst/trainer.html)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "aeb7ce50b0b515f4",
    "metadata": {
     "ExecuteTime": {
@@ -534,18 +565,10 @@
    },
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "GPU available: False, used: False\n",
-      "TPU available: False, using: 0 TPU cores\n",
-      "HPU available: False, using: 0 HPUs\n"
-     ]
-    },
-    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Debugging Info:\n",
       "‼️Länge der Eingabepunkte (input_pts): 94\n",
       "‼️Länge der Ausgabepunkte (output_pts): 94\n"
      ]
@@ -554,13 +577,16 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
+      "GPU available: False, used: False\n",
+      "TPU available: False, using: 0 TPU cores\n",
+      "HPU available: False, using: 0 HPUs\n",
       "C:\\Users\\hab185\\Documents\\00_Tim\\01_Implementierung\\pina_oedometer\\venv\\Lib\\site-packages\\pytorch_lightning\\loops\\fit_loop.py:310: The number of training batches (10) is smaller than the logging interval Trainer(log_every_n_steps=50). Set a lower value for log_every_n_steps if you want to see logs for the training epoch.\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "398d6f6b3dc049a3a72fa942f4505903",
+       "model_id": "622e3bc239514639bf4b8daf251137a9",
        "version_major": 2,
        "version_minor": 0
       },
@@ -575,16 +601,24 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "`Trainer.fit` stopped: `max_epochs=1500` reached.\n"
+      "`Trainer.fit` stopped: `max_epochs=1000` reached.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Finale Loss Werte\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "{'data_loss': tensor(0.0019), 'mean_loss': tensor(0.0019)}"
+       "{'data_loss': tensor(0.0466), 'mean_loss': tensor(0.0466)}"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -598,6 +632,7 @@
     "from pytorch_lightning.loggers import TensorBoardLogger  # Import TensorBoard Logger\n",
     "\n",
     "if debug_mode.value:\n",
+    "    print('Debugging Info:')\n",
     "    # Überprüfen der Größe der Eingabepunkte und Ausgabepunkte\n",
     "    print(\"‼️Länge der Eingabepunkte (input_pts):\", len(problem.input_pts['data']))\n",
     "    print(\"‼️Länge der Ausgabepunkte (output_pts):\", len(problem.output_pts))\n",
@@ -619,7 +654,7 @@
     "# Trainer erstellen mit TensorBoard-Logger\n",
     "trainer = Trainer(\n",
     "    solver=pinn,\n",
-    "    max_epochs=1500,\n",
+    "    max_epochs=1000,\n",
     "    callbacks=[MetricTracker()],\n",
     "    batch_size=10,\n",
     "    accelerator='cpu',\n",
@@ -631,21 +666,73 @@
     "# Training starten\n",
     "trainer.train()\n",
     "\n",
+    "print('\\nFinale Loss Werte')\n",
     "# Inspect final loss\n",
-    "trainer.logged_metrics\n"
+    "trainer.logged_metrics"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "078a21a7-66f3-4684-b49f-e1d1aeaaa974",
+   "metadata": {},
+   "source": [
+    "## **Visualisierung der Modellvorhersage für sigma_1**\n",
+    "\n",
+    "Dieser Code erstellt einen **Plot der wahren Werte (`sigma_1`)** im Vergleich zur **Vorhersage des neuronalen Netzwerks**.\n",
+    "\n",
+    "- **Datenvorbereitung (`input_data`)**: Die Eingabedaten (`sigma_0` und `delta_epsilon`) werden als `LabelTensor` für das trainierte Modell erstellt.\n",
+    "- **Modellvorhersage (`pinn(input_data)`)**: Das trainierte PINN-Modell gibt eine Prognose für `sigma_1` aus.\n",
+    "- **Plot-Erstellung mit `matplotlib`**:  \n",
+    "  - Die wahre Lösung (`sigma_1`) wird als **blaue gestrichelte Linie** dargestellt.  \n",
+    "  - Die Vorhersage des neuronalen Netzwerks wird als **rote durchgezogene Linie** geplottet.  \n",
+    "\n",
+    "**Zusätzlicher Schritt:**  \n",
+    "Die Nutzung von `matplotlib` war notwendig, da die interne Plot-Funktion von PINA `pl.plot()` das Diagramm nicht wie in den Tutorials erwartungsgemäß generierte, selbst wenn `delta_epsilon` auf einen fixen Wert gesetzt wurde. Dies könnte auf eine fehlerhafte Nutzung der Funktion oder auf eine Inkompatibilität in der Darstellung zurückzuführen sein."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 8,
    "id": "de070fe2-16f3-40f1-8602-36aebfb3818a",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Data-Loss bis simga_19\n",
+      "\n",
+      "     sigma_t  True sigma_t+1  Predicted sigma_t+1  Loss (True - Predicted)\n",
+      "0    1.00000         0.20000              0.19889                  0.00111\n",
+      "1    1.20000         0.24000              0.23327                  0.00673\n",
+      "2    1.44000         0.28800              0.28144                  0.00656\n",
+      "3    1.72800         0.34560              0.34100                  0.00460\n",
+      "4    2.07360         0.41472              0.41168                  0.00304\n",
+      "5    2.48832         0.49766              0.49635                  0.00131\n",
+      "6    2.98598         0.59720              0.59596                  0.00124\n",
+      "7    3.58318         0.71664              0.71468                  0.00196\n",
+      "8    4.29982         0.85996              0.85430                  0.00566\n",
+      "9    5.15978         1.03196              1.02953                  0.00243\n",
+      "10   6.19174         1.23835              1.25097                 -0.01262\n",
+      "11   7.43008         1.48602              1.49066                 -0.00464\n",
+      "12   8.91610         1.78322              1.77946                  0.00376\n",
+      "13  10.69932         2.13986              2.13063                  0.00923\n",
+      "14  12.83918         2.56784              2.55240                  0.01544\n",
+      "15  15.40702         3.08140              3.05907                  0.02233\n",
+      "16  18.48843         3.69769              3.68927                  0.00842\n",
+      "17  22.18611         4.43722              4.45537                 -0.01814\n",
+      "18  26.62333         5.32467              5.37468                 -0.05001\n",
+      "19  31.94800         6.38960              6.47786                 -0.08827\n"
+     ]
+    }
+   ],
    "source": [
     "import matplotlib\n",
-    "matplotlib.use('Agg')\n",
+    "matplotlib.use('Agg') # Keine doppelte Darstellung des Plottes\n",
     "import matplotlib.pyplot as plt\n",
     "import torch\n",
+    "\n",
+    "max_i = 20\n",
     "\n",
     "# Erstelle die Eingabedaten als LabelTensor für das trainierte Modell\n",
     "input_data = LabelTensor(torch.tensor(\n",
@@ -656,17 +743,36 @@
     "sigma_1_pred = pinn(input_data).detach().numpy()\n",
     "\n",
     "# Plot der wahren vs. vorhergesagten Werte\n",
-    "plt.figure(figsize=(8, 5))\n",
+    "plt.figure(figsize=(10, 5))\n",
     "\n",
-    "plt.plot(data_dict['sigma_0'], data_dict['sigma_1'], label=\"True Solution (sigma_1)\", linestyle='dashed', color='blue')\n",
-    "plt.plot(data_dict['sigma_0'], sigma_1_pred, label=\"NN Prediction (sigma_1)\", linestyle='solid', color='red')\n",
+    "plt.plot(data_dict['sigma_0'][0:max_i], data_dict['sigma_1'][0:max_i], label=\"True Solution (sigma_1)\", linestyle='dashed', color='blue')\n",
+    "plt.plot(data_dict['sigma_0'][0:max_i], sigma_1_pred[0:max_i], label=\"NN Prediction (sigma_1)\", linestyle='solid', color='red')\n",
     "\n",
     "plt.xlabel(\"sigma_0\")\n",
     "plt.ylabel(\"sigma_1\")\n",
-    "plt.title(\"Prediction vs. True Solution (delta_epsilon=0.0005)\")\n",
+    "plt.title(f\"Prediction vs. True Solution (delta_epsilon=0.0005, max_i={str(max_i-1)})\")\n",
     "plt.legend()\n",
     "plt.grid()\n",
-    "plt.savefig('./graph/visual_prediction-vs-truesolution.png',)\n"
+    "plt.savefig('./graph/visual_prediction-vs-truesolution.png',)\n",
+    "\n",
+    "# Überprüfen, ob die notwendigen Variablen existieren\n",
+    "if 'data_dict' in globals() and 'sigma_1_pred' in globals():\n",
+    "    # Erstelle eine Tabelle für die übersichtliche Darstellung\n",
+    "    data_loss_table = pd.DataFrame({\n",
+    "        \"sigma_t\": np.round(data_dict[\"sigma_0\"][0:max_i], 5),\n",
+    "        \"True sigma_t+1\": np.round(data_dict[\"sigma_1\"][0:max_i], 5),\n",
+    "        \"Predicted sigma_t+1\": np.round(sigma_1_pred[0:max_i].flatten(), 5),\n",
+    "        \"Loss (True - Predicted)\": np.round(data_dict[\"sigma_1\"][0:max_i] - sigma_1_pred[0:max_i].flatten(), 5)\n",
+    "    })\n",
+    "\n",
+    "    pd.set_option('display.max_rows', None)  # Keine Begrenzung der Zeilen\n",
+    "    pd.set_option('display.max_columns', None)  # Keine Begrenzung der Spalten\n",
+    "    pd.set_option('display.width', 1000)  # Breite für bessere Lesbarkeit\n",
+    "\n",
+    "    print(f'Data-Loss bis simga_{str(max_i-1)}\\n')\n",
+    "    print(data_loss_table)\n",
+    "else:\n",
+    "    print(\"Fehler: `data_dict` oder `sigma_1_pred` ist nicht definiert!\")"
    ]
   },
   {
@@ -674,12 +780,13 @@
    "id": "96df330f-68a8-4a28-bec1-7a7d4a3446e9",
    "metadata": {},
    "source": [
-    "![Prediction vs True Solution](./graph/visual_prediction-vs-truesolution.png)"
+    "<img src=\"./graph/visual_prediction-vs-truesolution.png\" alt=\"Prediction vs True Solution\" height=\"100\"><br>\n",
+    "**Hinweis:** Datenpunkte liegen sehr nahe beieinander. "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 9,
    "id": "367434e3c1076341",
    "metadata": {
     "ExecuteTime": {
@@ -687,17 +794,23 @@
      "start_time": "2025-03-12T08:26:44.026059Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/markdown": [
+       "![NN Error result](./graph/visual_nn-result-error.png)"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Markdown object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
-    "pl.plot(solver=pinn, filename='./graph/visual_nn-result-error.png')"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "f13d0a8e-8bdd-4e64-9050-34555235972c",
-   "metadata": {},
-   "source": [
-    "![NN Error result](./graph/visual_nn-result-error.png)"
+    "pl.plot(solver=pinn, filename='./graph/visual_nn-result-error.png')\n",
+    "display(Markdown('![NN Error result](./graph/visual_nn-result-error.png)'))"
    ]
   },
   {
@@ -710,7 +823,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 11,
    "id": "2cc792fe16f92e4b",
    "metadata": {
     "ExecuteTime": {
@@ -718,18 +831,24 @@
      "start_time": "2025-03-12T08:21:26.295329Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/markdown": [
+       "![Loss Kurve](./graph/visual_loss.png)"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Markdown object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "# plotting the solution\n",
-    "pl.plot_loss(trainer, label='mean_loss', logy=True, filename='./graph/visual_loss.png')"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "13090c84-d24e-467c-9532-ccd4c8bff9c9",
-   "metadata": {},
-   "source": [
-    "![Loss Kurve](./graph/visual_loss.png)"
+    "pl.plot_loss(trainer, label='mean_loss', logy=True, filename='./graph/visual_loss.png')\n",
+    "display(Markdown('![Loss Kurve](./graph/visual_loss.png)'))"
    ]
   }
  ],
