--- a/01_main_problem_no_bounderys.ipynb
+++ b/01_main_problem_no_bounderys.ipynb
@@ -55,59 +55,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 12,
    "id": "e8ab565a-fc02-41df-89e3-9888204d845d",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ee834606546d43a7b6e62f3b1ddb5381",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Checkbox(value=True, description='Debug Mode aktivieren')"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "fd8c28d9756245789da1872628506eb8",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Checkbox(value=False, description='Daten normalisieren')"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "import ipywidgets as widgets\n",
     "from IPython.display import display, Markdown\n",
     "\n",
-    "# Checkbox erstellen\n",
-    "debug_mode = widgets.Checkbox(\n",
-    "    value=True,  # Standard: Eingeschaltet\n",
-    "    description=\"Debug Mode aktivieren\",\n",
-    "    disabled=False\n",
-    ")\n",
-    "\n",
-    "normalize_data = widgets.Checkbox(\n",
-    "    value=False,  # Standard: Ausgeschaltet\n",
-    "    description=\"Daten normalisieren\",\n",
-    "    disabled=False\n",
-    ")\n",
-    "\n",
-    "# Checkbox anzeigen\n",
-    "display(debug_mode)\n",
-    "display(normalize_data)"
+    "# Debugger: Aktiviert\n",
+    "debug_mode = True\n",
+    "# Normalisierung der Daten: Deaktiviert\n",
+    "normalize_data = False"
    ]
   },
   {
@@ -586,7 +544,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "622e3bc239514639bf4b8daf251137a9",
+       "model_id": "76c7b1e32df34ff598048cf7712f3636",
        "version_major": 2,
        "version_minor": 0
       },
@@ -615,7 +573,7 @@
     {
      "data": {
       "text/plain": [
-       "{'data_loss': tensor(0.0466), 'mean_loss': tensor(0.0466)}"
+       "{'data_loss': tensor(0.0008), 'mean_loss': tensor(0.0008)}"
       ]
      },
      "execution_count": 7,
@@ -703,26 +661,26 @@
       "Data-Loss bis simga_19\n",
       "\n",
       "     sigma_t  True sigma_t+1  Predicted sigma_t+1  Loss (True - Predicted)\n",
-      "0    1.00000         0.20000              0.19889                  0.00111\n",
-      "1    1.20000         0.24000              0.23327                  0.00673\n",
-      "2    1.44000         0.28800              0.28144                  0.00656\n",
-      "3    1.72800         0.34560              0.34100                  0.00460\n",
-      "4    2.07360         0.41472              0.41168                  0.00304\n",
-      "5    2.48832         0.49766              0.49635                  0.00131\n",
-      "6    2.98598         0.59720              0.59596                  0.00124\n",
-      "7    3.58318         0.71664              0.71468                  0.00196\n",
-      "8    4.29982         0.85996              0.85430                  0.00566\n",
-      "9    5.15978         1.03196              1.02953                  0.00243\n",
-      "10   6.19174         1.23835              1.25097                 -0.01262\n",
-      "11   7.43008         1.48602              1.49066                 -0.00464\n",
-      "12   8.91610         1.78322              1.77946                  0.00376\n",
-      "13  10.69932         2.13986              2.13063                  0.00923\n",
-      "14  12.83918         2.56784              2.55240                  0.01544\n",
-      "15  15.40702         3.08140              3.05907                  0.02233\n",
-      "16  18.48843         3.69769              3.68927                  0.00842\n",
-      "17  22.18611         4.43722              4.45537                 -0.01814\n",
-      "18  26.62333         5.32467              5.37468                 -0.05001\n",
-      "19  31.94800         6.38960              6.47786                 -0.08827\n"
+      "0    1.00000         0.20000              0.19873                  0.00127\n",
+      "1    1.20000         0.24000              0.23726                  0.00274\n",
+      "2    1.44000         0.28800              0.28636                  0.00164\n",
+      "3    1.72800         0.34560              0.34480                  0.00080\n",
+      "4    2.07360         0.41472              0.41426                  0.00046\n",
+      "5    2.48832         0.49766              0.49746                  0.00020\n",
+      "6    2.98598         0.59720              0.59657                  0.00063\n",
+      "7    3.58318         0.71664              0.71650                  0.00013\n",
+      "8    4.29982         0.85996              0.85959                  0.00037\n",
+      "9    5.15978         1.03196              1.03239                 -0.00044\n",
+      "10   6.19174         1.23835              1.23777                  0.00058\n",
+      "11   7.43008         1.48602              1.48602                 -0.00001\n",
+      "12   8.91610         1.78322              1.78378                 -0.00056\n",
+      "13  10.69932         2.13986              2.14049                 -0.00062\n",
+      "14  12.83918         2.56784              2.56830                 -0.00046\n",
+      "15  15.40702         3.08140              3.08123                  0.00018\n",
+      "16  18.48843         3.69769              3.69674                  0.00094\n",
+      "17  22.18611         4.43722              4.43536                  0.00187\n",
+      "18  26.62333         5.32467              5.32217                  0.00250\n",
+      "19  31.94800         6.38960              6.38718                  0.00242\n"
      ]
     }
    ],
@@ -787,6 +745,16 @@
   {
    "cell_type": "code",
    "execution_count": 9,
+   "id": "8dc956de-164f-4064-a138-1ed8e9399856",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## Visualisierung Error-Result"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
    "id": "367434e3c1076341",
    "metadata": {
     "ExecuteTime": {
@@ -823,7 +791,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "id": "2cc792fe16f92e4b",
    "metadata": {
     "ExecuteTime": {
