--- a/01_main_problem_no_bounderys.ipynb
+++ b/01_main_problem_no_bounderys.ipynb
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 1,
    "id": "e8ab565a-fc02-41df-89e3-9888204d845d",
    "metadata": {},
    "outputs": [],
@@ -66,6 +66,14 @@
     "debug_mode = True\n",
     "# Normalisierung der Daten: Deaktiviert\n",
     "normalize_data = False"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "39ccebd6-ea34-4979-a87a-59aec6f551e9",
+   "metadata": {},
+   "source": [
+    "## Laden der Daten aus `oedo_trainingsdata.xlsx`"
    ]
   },
   {
@@ -168,7 +176,7 @@
     "# Daten als dict speichern\n",
     "data_dict = {col: np.array(data_subset[col]) for col in data_subset.columns}\n",
     "\n",
-    "if debug_mode.value:\n",
+    "if debug_mode:\n",
     "    print('‼️Geladene Exceldaten')\n",
     "    print(data_dict)"
    ]
@@ -200,7 +208,7 @@
     }
    ],
    "source": [
-    "if normalize_data.value:\n",
+    "if normalize_data:\n",
     "    data_dict.update({'sigma_0_raw': data_dict.pop('sigma_0')})\n",
     "    data_dict.update({'sigma_1_raw': data_dict.pop('sigma_1')})\n",
     "    \n",
@@ -267,7 +275,7 @@
     "# Kombinieren der Trainingsdaten (Verwendung von 'np.column_stack' für bessere Performance)\n",
     "input_points_combined = LabelTensor(torch.tensor(np.column_stack([data_dict['sigma_0'], data_dict['delta_epsilon']]), dtype=torch.float), ['sigma_0', 'delta_epsilon'])\n",
     "\n",
-    "if debug_mode.value:\n",
+    "if debug_mode:\n",
     "    print('‼️Data Loaded')\n",
     "    print(f' sigma_0: {sigma_0_train.size()}')\n",
     "    print(f' delta_epsilon: {delta_epsilon_train.shape}')\n",
@@ -440,7 +448,7 @@
     "# Datengenerierung, falls Randbedingungen definiert\n",
     "# problem.discretise_domain(n=993, mode='random', variables='all', locations='all') # Notwendig, wenn \"input_pts\" und \"output_pts\" nicht vorgegeben sind\n",
     "\n",
-    "if debug_mode.value:\n",
+    "if debug_mode:\n",
     "    # Debugging-Ausgaben\n",
     "    print(\"‼️Geladene Input Variablen: \", problem.input_variables)\n",
     "    print(\"‼️Geladene Output Variablen: \", problem.output_variables)\n",
@@ -511,7 +519,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "aeb7ce50b0b515f4",
    "metadata": {
     "ExecuteTime": {
@@ -522,6 +530,15 @@
     }
    },
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "GPU available: False, used: False\n",
+      "TPU available: False, using: 0 TPU cores\n",
+      "HPU available: False, using: 0 HPUs\n"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -535,16 +552,13 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "GPU available: False, used: False\n",
-      "TPU available: False, using: 0 TPU cores\n",
-      "HPU available: False, using: 0 HPUs\n",
       "C:\\Users\\hab185\\Documents\\00_Tim\\01_Implementierung\\pina_oedometer\\venv\\Lib\\site-packages\\pytorch_lightning\\loops\\fit_loop.py:310: The number of training batches (10) is smaller than the logging interval Trainer(log_every_n_steps=50). Set a lower value for log_every_n_steps if you want to see logs for the training epoch.\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "76c7b1e32df34ff598048cf7712f3636",
+       "model_id": "40b921786fa949c79677ca33475dc82d",
        "version_major": 2,
        "version_minor": 0
       },
@@ -573,10 +587,10 @@
     {
      "data": {
       "text/plain": [
-       "{'data_loss': tensor(0.0008), 'mean_loss': tensor(0.0008)}"
+       "{'data_loss': tensor(0.0122), 'mean_loss': tensor(0.0122)}"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -589,7 +603,7 @@
     "import torch\n",
     "from pytorch_lightning.loggers import TensorBoardLogger  # Import TensorBoard Logger\n",
     "\n",
-    "if debug_mode.value:\n",
+    "if debug_mode:\n",
     "    print('Debugging Info:')\n",
     "    # Überprüfen der Größe der Eingabepunkte und Ausgabepunkte\n",
     "    print(\"‼️Länge der Eingabepunkte (input_pts):\", len(problem.input_pts['data']))\n",
@@ -606,7 +620,7 @@
     "# PINN-Objekt erstellen\n",
     "pinn = PINN(problem, model)\n",
     "\n",
-    "# TensorBoard-Logger einrichten\n",
+    "# TensorBoard-Logger\n",
     "logger = TensorBoardLogger(\"tensorboard_logs\", name=\"pina_experiment\")\n",
     "\n",
     "# Trainer erstellen mit TensorBoard-Logger\n",
@@ -650,7 +664,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "de070fe2-16f3-40f1-8602-36aebfb3818a",
    "metadata": {},
    "outputs": [
@@ -661,27 +675,39 @@
       "Data-Loss bis simga_19\n",
       "\n",
       "     sigma_t  True sigma_t+1  Predicted sigma_t+1  Loss (True - Predicted)\n",
-      "0    1.00000         0.20000              0.19873                  0.00127\n",
-      "1    1.20000         0.24000              0.23726                  0.00274\n",
-      "2    1.44000         0.28800              0.28636                  0.00164\n",
-      "3    1.72800         0.34560              0.34480                  0.00080\n",
-      "4    2.07360         0.41472              0.41426                  0.00046\n",
-      "5    2.48832         0.49766              0.49746                  0.00020\n",
-      "6    2.98598         0.59720              0.59657                  0.00063\n",
-      "7    3.58318         0.71664              0.71650                  0.00013\n",
-      "8    4.29982         0.85996              0.85959                  0.00037\n",
-      "9    5.15978         1.03196              1.03239                 -0.00044\n",
-      "10   6.19174         1.23835              1.23777                  0.00058\n",
-      "11   7.43008         1.48602              1.48602                 -0.00001\n",
-      "12   8.91610         1.78322              1.78378                 -0.00056\n",
-      "13  10.69932         2.13986              2.14049                 -0.00062\n",
-      "14  12.83918         2.56784              2.56830                 -0.00046\n",
-      "15  15.40702         3.08140              3.08123                  0.00018\n",
-      "16  18.48843         3.69769              3.69674                  0.00094\n",
-      "17  22.18611         4.43722              4.43536                  0.00187\n",
-      "18  26.62333         5.32467              5.32217                  0.00250\n",
-      "19  31.94800         6.38960              6.38718                  0.00242\n"
+      "0    1.00000         0.20000              0.20419                 -0.00419\n",
+      "1    1.20000         0.24000              0.23889                  0.00111\n",
+      "2    1.44000         0.28800              0.28515                  0.00285\n",
+      "3    1.72800         0.34560              0.34548                  0.00012\n",
+      "4    2.07360         0.41472              0.41705                 -0.00233\n",
+      "5    2.48832         0.49766              0.49664                  0.00103\n",
+      "6    2.98598         0.59720              0.59513                  0.00206\n",
+      "7    3.58318         0.71664              0.71509                  0.00154\n",
+      "8    4.29982         0.85996              0.86259                 -0.00263\n",
+      "9    5.15978         1.03196              1.03463                 -0.00268\n",
+      "10   6.19174         1.23835              1.23958                 -0.00124\n",
+      "11   7.43008         1.48602              1.48540                  0.00061\n",
+      "12   8.91610         1.78322              1.78039                  0.00283\n",
+      "13  10.69932         2.13986              2.13488                  0.00498\n",
+      "14  12.83918         2.56784              2.56115                  0.00668\n",
+      "15  15.40702         3.08140              3.07271                  0.00869\n",
+      "16  18.48843         3.69769              3.68785                  0.00983\n",
+      "17  22.18611         4.43722              4.43908                 -0.00186\n",
+      "18  26.62333         5.32467              5.34056                 -0.01589\n",
+      "19  31.94800         6.38960              6.42114                 -0.03154\n"
      ]
+    },
+    {
+     "data": {
+      "text/markdown": [
+       "![Prediction vs True Solution](./graph/visual_prediction-vs-truesolution.png)<br>**Hinweis:** Datenpunkte liegen sehr nahe beieinander."
+      ],
+      "text/plain": [
+       "<IPython.core.display.Markdown object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
@@ -730,21 +756,14 @@
     "    print(f'Data-Loss bis simga_{str(max_i-1)}\\n')\n",
     "    print(data_loss_table)\n",
     "else:\n",
-    "    print(\"Fehler: `data_dict` oder `sigma_1_pred` ist nicht definiert!\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "96df330f-68a8-4a28-bec1-7a7d4a3446e9",
-   "metadata": {},
-   "source": [
-    "<img src=\"./graph/visual_prediction-vs-truesolution.png\" alt=\"Prediction vs True Solution\" height=\"100\"><br>\n",
-    "**Hinweis:** Datenpunkte liegen sehr nahe beieinander. "
+    "    print(\"Fehler: `data_dict` oder `sigma_1_pred` ist nicht definiert!\")\n",
+    "\n",
+    "display(Markdown('![Prediction vs True Solution](./graph/visual_prediction-vs-truesolution.png)<br>**Hinweis:** Datenpunkte liegen sehr nahe beieinander.'))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "8dc956de-164f-4064-a138-1ed8e9399856",
    "metadata": {},
    "outputs": [],
@@ -754,7 +773,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "id": "367434e3c1076341",
    "metadata": {
     "ExecuteTime": {
