--- a/01_main_problem_no_bounderys.ipynb
+++ b/01_main_problem_no_bounderys.ipynb
@@ -27,17 +27,17 @@
     "\\begin{array}{rcl}\n",
     "    \\sigma_{t+1} & = & \\sigma_{t}+\\Delta\\sigma \\\\ \\\\\n",
     "    \\Delta\\sigma & = & E_s\\cdot \\Delta\\epsilon \\\\ \n",
-    "    E_s & = & \\frac{1+e_0}{C_c} \\cdot \\sigma\n",
+    "    E_s & = & \\frac{1+e_0}{C_c} \\cdot \\sigma_t\n",
     "\\end{array}\n",
     "\\hspace{2cm}\n",
     "\\begin{array}{l}\n",
     "    \\textbf{Annahmen:} \\\\ \\\\\n",
     "    \\text{Startwert d. Iteration: } \\sigma_0 = 1,00 \\\\ \n",
     "    e_0 = 1,00 \\\\ \n",
-    "    C_c = 0,0005\n",
+    "    C_c = 0,005 \\\\\n",
+    "    \\Delta\\epsilon = 0,0005\n",
     "\\end{array}\n",
     "$$\n",
-    "\n",
     "<div = style=\"text-align: center;\">\n",
     "    <img alt=\"Problem Oedometer Preview\" src=\"./graph/problem_preview.png\" width=\"50%\" height=auto>\n",
     "</div>\n",
@@ -762,11 +762,9 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 10,
-   "id": "8dc956de-164f-4064-a138-1ed8e9399856",
+   "cell_type": "markdown",
+   "id": "51709f02-c3c7-4076-b873-41e9d45d0c97",
    "metadata": {},
-   "outputs": [],
    "source": [
     "## Visualisierung Error-Result"
    ]
