--- a/tutorials/02_tutorial_equation_class.ipynb
+++ b/tutorials/02_tutorial_equation_class.ipynb
@@ -1,8 +1,9 @@
 {
  "cells": [
   {
-   "metadata": {},
    "cell_type": "markdown",
+   "id": "9e46cd1278d60cf1",
+   "metadata": {},
    "source": [
     "# Tutorial: Die `Equation` Klasse\n",
     "Source: [PINA-Equation](https://mathlab.github.io/PINA/_rst/tutorials/tutorial12/tutorial.html) <br>\n",
@@ -19,14 +20,14 @@
     "  \\text{mit} \\quad v &=\\frac{0.01}{\\pi}\n",
     "\\end{cases}\n",
     "$$"
-   ],
-   "id": "9e46cd1278d60cf1"
+   ]
   },
   {
-   "metadata": {},
    "cell_type": "code",
-   "outputs": [],
    "execution_count": null,
+   "id": "f500587c95d60f68",
+   "metadata": {},
+   "outputs": [],
    "source": [
     "#useful imports\n",
     "from pina.problem import SpatialProblem, TimeDependentProblem\n",
@@ -35,14 +36,14 @@
     "import torch\n",
     "from pina.operators import grad, laplacian\n",
     "from pina import Condition"
-   ],
-   "id": "f500587c95d60f68"
+   ]
   },
   {
-   "metadata": {},
    "cell_type": "code",
-   "outputs": [],
    "execution_count": null,
+   "id": "b8c1056237488d40",
+   "metadata": {},
+   "outputs": [],
    "source": [
     "class Burgers1D(TimeDependentProblem, SpatialProblem):\n",
     "\n",
@@ -73,27 +74,26 @@
     "        't0': Condition(location=CartesianDomain({'x': [-1, 1], 't': 0}), equation=Equation(initial_condition)),\n",
     "        'D': Condition(location=CartesianDomain({'x': [-1, 1], 't': [0, 1]}), equation=Equation(burger_equation)),\n",
     "    }"
-   ],
-   "id": "b8c1056237488d40"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.6"
+   "pygments_lexer": "ipython3",
+   "version": "3.12.9"
   }
  },
  "nbformat": 4,
