--- a/01_main_problem_no_bounderys.ipynb
+++ b/01_main_problem_no_bounderys.ipynb
@@ -92,64 +92,15 @@
      "output_type": "stream",
      "text": [
       "‼️Geladene Exceldaten\n",
-      "{'sigma_0': array([1.00000000e+00, 1.20000000e+00, 1.44000000e+00, 1.72800000e+00,\n",
-      "       2.07360000e+00, 2.48832000e+00, 2.98598400e+00, 3.58318080e+00,\n",
-      "       4.29981696e+00, 5.15978035e+00, 6.19173642e+00, 7.43008371e+00,\n",
-      "       8.91610045e+00, 1.06993205e+01, 1.28391846e+01, 1.54070216e+01,\n",
-      "       1.84884259e+01, 2.21861111e+01, 2.66233333e+01, 3.19479999e+01,\n",
-      "       3.83375999e+01, 4.60051199e+01, 5.52061439e+01, 6.62473727e+01,\n",
-      "       7.94968472e+01, 9.53962166e+01, 1.14475460e+02, 1.37370552e+02,\n",
-      "       1.64844662e+02, 1.97813595e+02, 2.37376314e+02, 2.84851577e+02,\n",
-      "       3.41821892e+02, 4.10186270e+02, 4.92223524e+02, 5.90668229e+02,\n",
-      "       7.08801875e+02, 8.50562250e+02, 1.02067470e+03, 1.22480964e+03,\n",
-      "       1.46977157e+03, 1.76372588e+03, 2.11647106e+03, 2.53976527e+03,\n",
-      "       3.04771832e+03, 3.65726199e+03, 4.38871439e+03, 5.26645726e+03,\n",
-      "       6.31974872e+03, 7.58369846e+03, 9.10043815e+03, 1.09205258e+04,\n",
-      "       1.31046309e+04, 1.57255571e+04, 1.88706685e+04, 2.26448023e+04,\n",
-      "       2.71737627e+04, 3.26085153e+04, 3.91302183e+04, 4.69562620e+04,\n",
-      "       5.63475144e+04, 6.76170172e+04, 8.11404207e+04, 9.73685048e+04,\n",
-      "       1.16842206e+05, 1.40210647e+05, 1.68252776e+05, 2.01903332e+05,\n",
-      "       2.42283998e+05, 2.90740797e+05, 3.48888957e+05, 4.18666748e+05,\n",
-      "       5.02400098e+05, 6.02880118e+05, 7.23456141e+05, 8.68147369e+05,\n",
-      "       1.04177684e+06, 1.25013221e+06, 1.50015865e+06, 1.80019039e+06,\n",
-      "       2.16022846e+06, 2.59227415e+06, 3.11072899e+06, 3.73287478e+06,\n",
-      "       4.47944974e+06, 5.37533969e+06, 6.45040762e+06, 7.74048915e+06,\n",
-      "       9.28858698e+06, 1.11463044e+07, 1.33755652e+07, 1.60506783e+07,\n",
-      "       1.92608140e+07, 2.31129768e+07]), 'delta_epsilon': array([0.0005, 0.0005, 0.0005, 0.0005, 0.0005, 0.0005, 0.0005, 0.0005,\n",
+      "{'sigma_0': array([ 1.        ,  1.2       ,  1.44      ,  1.728     ,  2.0736    ,\n",
+      "        2.48832   ,  2.985984  ,  3.5831808 ,  4.29981696,  5.15978035,\n",
+      "        6.19173642,  7.43008371,  8.91610045, 10.69932054, 12.83918465,\n",
+      "       15.40702157, 18.48842589, 22.18611107, 26.62333328, 31.94799994]), 'delta_epsilon': array([0.0005, 0.0005, 0.0005, 0.0005, 0.0005, 0.0005, 0.0005, 0.0005,\n",
       "       0.0005, 0.0005, 0.0005, 0.0005, 0.0005, 0.0005, 0.0005, 0.0005,\n",
-      "       0.0005, 0.0005, 0.0005, 0.0005, 0.0005, 0.0005, 0.0005, 0.0005,\n",
-      "       0.0005, 0.0005, 0.0005, 0.0005, 0.0005, 0.0005, 0.0005, 0.0005,\n",
-      "       0.0005, 0.0005, 0.0005, 0.0005, 0.0005, 0.0005, 0.0005, 0.0005,\n",
-      "       0.0005, 0.0005, 0.0005, 0.0005, 0.0005, 0.0005, 0.0005, 0.0005,\n",
-      "       0.0005, 0.0005, 0.0005, 0.0005, 0.0005, 0.0005, 0.0005, 0.0005,\n",
-      "       0.0005, 0.0005, 0.0005, 0.0005, 0.0005, 0.0005, 0.0005, 0.0005,\n",
-      "       0.0005, 0.0005, 0.0005, 0.0005, 0.0005, 0.0005, 0.0005, 0.0005,\n",
-      "       0.0005, 0.0005, 0.0005, 0.0005, 0.0005, 0.0005, 0.0005, 0.0005,\n",
-      "       0.0005, 0.0005, 0.0005, 0.0005, 0.0005, 0.0005, 0.0005, 0.0005,\n",
-      "       0.0005, 0.0005, 0.0005, 0.0005, 0.0005, 0.0005]), 'sigma_1': array([2.00000000e-01, 2.40000000e-01, 2.88000000e-01, 3.45600000e-01,\n",
-      "       4.14720000e-01, 4.97664000e-01, 5.97196800e-01, 7.16636160e-01,\n",
-      "       8.59963392e-01, 1.03195607e+00, 1.23834728e+00, 1.48601674e+00,\n",
-      "       1.78322009e+00, 2.13986411e+00, 2.56783693e+00, 3.08140431e+00,\n",
-      "       3.69768518e+00, 4.43722221e+00, 5.32466666e+00, 6.38959999e+00,\n",
-      "       7.66751998e+00, 9.20102398e+00, 1.10412288e+01, 1.32494745e+01,\n",
-      "       1.58993694e+01, 1.90792433e+01, 2.28950920e+01, 2.74741104e+01,\n",
-      "       3.29689325e+01, 3.95627190e+01, 4.74752628e+01, 5.69703153e+01,\n",
-      "       6.83643784e+01, 8.20372540e+01, 9.84447049e+01, 1.18133646e+02,\n",
-      "       1.41760375e+02, 1.70112450e+02, 2.04134940e+02, 2.44961928e+02,\n",
-      "       2.93954314e+02, 3.52745176e+02, 4.23294212e+02, 5.07953054e+02,\n",
-      "       6.09543665e+02, 7.31452398e+02, 8.77742877e+02, 1.05329145e+03,\n",
-      "       1.26394974e+03, 1.51673969e+03, 1.82008763e+03, 2.18410516e+03,\n",
-      "       2.62092619e+03, 3.14511142e+03, 3.77413371e+03, 4.52896045e+03,\n",
-      "       5.43475254e+03, 6.52170305e+03, 7.82604366e+03, 9.39125239e+03,\n",
-      "       1.12695029e+04, 1.35234034e+04, 1.62280841e+04, 1.94737010e+04,\n",
-      "       2.33684412e+04, 2.80421294e+04, 3.36505553e+04, 4.03806663e+04,\n",
-      "       4.84567996e+04, 5.81481595e+04, 6.97777914e+04, 8.37333497e+04,\n",
-      "       1.00480020e+05, 1.20576024e+05, 1.44691228e+05, 1.73629474e+05,\n",
-      "       2.08355369e+05, 2.50026442e+05, 3.00031731e+05, 3.60038077e+05,\n",
-      "       4.32045692e+05, 5.18454831e+05, 6.22145797e+05, 7.46574956e+05,\n",
-      "       8.95889948e+05, 1.07506794e+06, 1.29008152e+06, 1.54809783e+06,\n",
-      "       1.85771740e+06, 2.22926087e+06, 2.67511305e+06, 3.21013566e+06,\n",
-      "       3.85216279e+06, 4.62259535e+06])}\n"
+      "       0.0005, 0.0005, 0.0005, 0.0005]), 'sigma_1': array([0.2       , 0.24      , 0.288     , 0.3456    , 0.41472   ,\n",
+      "       0.497664  , 0.5971968 , 0.71663616, 0.85996339, 1.03195607,\n",
+      "       1.23834728, 1.48601674, 1.78322009, 2.13986411, 2.56783693,\n",
+      "       3.08140431, 3.69768518, 4.43722221, 5.32466666, 6.38959999])}\n"
      ]
     }
    ],
@@ -255,10 +206,10 @@
      "output_type": "stream",
      "text": [
       "‼️Data Loaded\n",
-      " sigma_0: torch.Size([94, 1])\n",
-      " delta_epsilon: torch.Size([94, 1])\n",
-      " sigma_0 und delta_epsilon combined: torch.Size([94, 2])\n",
-      " sigma_1: torch.Size([94, 1])\n"
+      " sigma_0: torch.Size([20, 1])\n",
+      " delta_epsilon: torch.Size([20, 1])\n",
+      " sigma_0 und delta_epsilon combined: torch.Size([20, 2])\n",
+      " sigma_1: torch.Size([20, 1])\n"
      ]
     }
    ],
@@ -340,81 +291,7 @@
       "             [[1.8488e+01, 5.0000e-04]],\n",
       "             [[2.2186e+01, 5.0000e-04]],\n",
       "             [[2.6623e+01, 5.0000e-04]],\n",
-      "             [[3.1948e+01, 5.0000e-04]],\n",
-      "             [[3.8338e+01, 5.0000e-04]],\n",
-      "             [[4.6005e+01, 5.0000e-04]],\n",
-      "             [[5.5206e+01, 5.0000e-04]],\n",
-      "             [[6.6247e+01, 5.0000e-04]],\n",
-      "             [[7.9497e+01, 5.0000e-04]],\n",
-      "             [[9.5396e+01, 5.0000e-04]],\n",
-      "             [[1.1448e+02, 5.0000e-04]],\n",
-      "             [[1.3737e+02, 5.0000e-04]],\n",
-      "             [[1.6484e+02, 5.0000e-04]],\n",
-      "             [[1.9781e+02, 5.0000e-04]],\n",
-      "             [[2.3738e+02, 5.0000e-04]],\n",
-      "             [[2.8485e+02, 5.0000e-04]],\n",
-      "             [[3.4182e+02, 5.0000e-04]],\n",
-      "             [[4.1019e+02, 5.0000e-04]],\n",
-      "             [[4.9222e+02, 5.0000e-04]],\n",
-      "             [[5.9067e+02, 5.0000e-04]],\n",
-      "             [[7.0880e+02, 5.0000e-04]],\n",
-      "             [[8.5056e+02, 5.0000e-04]],\n",
-      "             [[1.0207e+03, 5.0000e-04]],\n",
-      "             [[1.2248e+03, 5.0000e-04]],\n",
-      "             [[1.4698e+03, 5.0000e-04]],\n",
-      "             [[1.7637e+03, 5.0000e-04]],\n",
-      "             [[2.1165e+03, 5.0000e-04]],\n",
-      "             [[2.5398e+03, 5.0000e-04]],\n",
-      "             [[3.0477e+03, 5.0000e-04]],\n",
-      "             [[3.6573e+03, 5.0000e-04]],\n",
-      "             [[4.3887e+03, 5.0000e-04]],\n",
-      "             [[5.2665e+03, 5.0000e-04]],\n",
-      "             [[6.3197e+03, 5.0000e-04]],\n",
-      "             [[7.5837e+03, 5.0000e-04]],\n",
-      "             [[9.1004e+03, 5.0000e-04]],\n",
-      "             [[1.0921e+04, 5.0000e-04]],\n",
-      "             [[1.3105e+04, 5.0000e-04]],\n",
-      "             [[1.5726e+04, 5.0000e-04]],\n",
-      "             [[1.8871e+04, 5.0000e-04]],\n",
-      "             [[2.2645e+04, 5.0000e-04]],\n",
-      "             [[2.7174e+04, 5.0000e-04]],\n",
-      "             [[3.2609e+04, 5.0000e-04]],\n",
-      "             [[3.9130e+04, 5.0000e-04]],\n",
-      "             [[4.6956e+04, 5.0000e-04]],\n",
-      "             [[5.6348e+04, 5.0000e-04]],\n",
-      "             [[6.7617e+04, 5.0000e-04]],\n",
-      "             [[8.1140e+04, 5.0000e-04]],\n",
-      "             [[9.7369e+04, 5.0000e-04]],\n",
-      "             [[1.1684e+05, 5.0000e-04]],\n",
-      "             [[1.4021e+05, 5.0000e-04]],\n",
-      "             [[1.6825e+05, 5.0000e-04]],\n",
-      "             [[2.0190e+05, 5.0000e-04]],\n",
-      "             [[2.4228e+05, 5.0000e-04]],\n",
-      "             [[2.9074e+05, 5.0000e-04]],\n",
-      "             [[3.4889e+05, 5.0000e-04]],\n",
-      "             [[4.1867e+05, 5.0000e-04]],\n",
-      "             [[5.0240e+05, 5.0000e-04]],\n",
-      "             [[6.0288e+05, 5.0000e-04]],\n",
-      "             [[7.2346e+05, 5.0000e-04]],\n",
-      "             [[8.6815e+05, 5.0000e-04]],\n",
-      "             [[1.0418e+06, 5.0000e-04]],\n",
-      "             [[1.2501e+06, 5.0000e-04]],\n",
-      "             [[1.5002e+06, 5.0000e-04]],\n",
-      "             [[1.8002e+06, 5.0000e-04]],\n",
-      "             [[2.1602e+06, 5.0000e-04]],\n",
-      "             [[2.5923e+06, 5.0000e-04]],\n",
-      "             [[3.1107e+06, 5.0000e-04]],\n",
-      "             [[3.7329e+06, 5.0000e-04]],\n",
-      "             [[4.4794e+06, 5.0000e-04]],\n",
-      "             [[5.3753e+06, 5.0000e-04]],\n",
-      "             [[6.4504e+06, 5.0000e-04]],\n",
-      "             [[7.7405e+06, 5.0000e-04]],\n",
-      "             [[9.2886e+06, 5.0000e-04]],\n",
-      "             [[1.1146e+07, 5.0000e-04]],\n",
-      "             [[1.3376e+07, 5.0000e-04]],\n",
-      "             [[1.6051e+07, 5.0000e-04]],\n",
-      "             [[1.9261e+07, 5.0000e-04]],\n",
-      "             [[2.3113e+07, 5.0000e-04]]])}\n"
+      "             [[3.1948e+01, 5.0000e-04]]])}\n"
      ]
     }
    ],
@@ -519,7 +396,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "aeb7ce50b0b515f4",
    "metadata": {
     "ExecuteTime": {
@@ -531,39 +408,33 @@
    },
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Debugging Info:\n",
+      "‼️Länge der Eingabepunkte (input_pts): 20\n",
+      "‼️Länge der Ausgabepunkte (output_pts): 20\n"
+     ]
+    },
+    {
      "name": "stderr",
      "output_type": "stream",
      "text": [
       "GPU available: False, used: False\n",
       "TPU available: False, using: 0 TPU cores\n",
-      "HPU available: False, using: 0 HPUs\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Debugging Info:\n",
-      "‼️Länge der Eingabepunkte (input_pts): 94\n",
-      "‼️Länge der Ausgabepunkte (output_pts): 94\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\hab185\\Documents\\00_Tim\\01_Implementierung\\pina_oedometer\\venv\\Lib\\site-packages\\pytorch_lightning\\loops\\fit_loop.py:310: The number of training batches (10) is smaller than the logging interval Trainer(log_every_n_steps=50). Set a lower value for log_every_n_steps if you want to see logs for the training epoch.\n"
+      "HPU available: False, using: 0 HPUs\n",
+      "C:\\Users\\hab185\\Documents\\00_Tim\\01_Implementierung\\pina_oedometer\\venv\\Lib\\site-packages\\pytorch_lightning\\loops\\fit_loop.py:310: The number of training batches (2) is smaller than the logging interval Trainer(log_every_n_steps=50). Set a lower value for log_every_n_steps if you want to see logs for the training epoch.\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "40b921786fa949c79677ca33475dc82d",
+       "model_id": "2a8d408e36304943b0c363b09d82dce9",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "Training: |                                                                    | 0/? [00:00<?, ?it/s]"
+       "Training: |                                                                                      | 0/? [00:00<…"
       ]
      },
      "metadata": {},
@@ -587,10 +458,10 @@
     {
      "data": {
       "text/plain": [
-       "{'data_loss': tensor(0.0122), 'mean_loss': tensor(0.0122)}"
+       "{'data_loss': tensor(2.5191e-07), 'mean_loss': tensor(2.5191e-07)}"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -664,7 +535,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "id": "de070fe2-16f3-40f1-8602-36aebfb3818a",
    "metadata": {},
    "outputs": [
@@ -675,26 +546,26 @@
       "Data-Loss bis simga_19\n",
       "\n",
       "     sigma_t  True sigma_t+1  Predicted sigma_t+1  Loss (True - Predicted)\n",
-      "0    1.00000         0.20000              0.20419                 -0.00419\n",
-      "1    1.20000         0.24000              0.23889                  0.00111\n",
-      "2    1.44000         0.28800              0.28515                  0.00285\n",
-      "3    1.72800         0.34560              0.34548                  0.00012\n",
-      "4    2.07360         0.41472              0.41705                 -0.00233\n",
-      "5    2.48832         0.49766              0.49664                  0.00103\n",
-      "6    2.98598         0.59720              0.59513                  0.00206\n",
-      "7    3.58318         0.71664              0.71509                  0.00154\n",
-      "8    4.29982         0.85996              0.86259                 -0.00263\n",
-      "9    5.15978         1.03196              1.03463                 -0.00268\n",
-      "10   6.19174         1.23835              1.23958                 -0.00124\n",
-      "11   7.43008         1.48602              1.48540                  0.00061\n",
-      "12   8.91610         1.78322              1.78039                  0.00283\n",
-      "13  10.69932         2.13986              2.13488                  0.00498\n",
-      "14  12.83918         2.56784              2.56115                  0.00668\n",
-      "15  15.40702         3.08140              3.07271                  0.00869\n",
-      "16  18.48843         3.69769              3.68785                  0.00983\n",
-      "17  22.18611         4.43722              4.43908                 -0.00186\n",
-      "18  26.62333         5.32467              5.34056                 -0.01589\n",
-      "19  31.94800         6.38960              6.42114                 -0.03154\n"
+      "0    1.00000         0.20000              0.20074                 -0.00074\n",
+      "1    1.20000         0.24000              0.23925                  0.00075\n",
+      "2    1.44000         0.28800              0.28735                  0.00065\n",
+      "3    1.72800         0.34560              0.34623                 -0.00063\n",
+      "4    2.07360         0.41472              0.41529                 -0.00057\n",
+      "5    2.48832         0.49766              0.49728                  0.00038\n",
+      "6    2.98598         0.59720              0.59662                  0.00058\n",
+      "7    3.58318         0.71664              0.71690                 -0.00027\n",
+      "8    4.29982         0.85996              0.86075                 -0.00078\n",
+      "9    5.15978         1.03196              1.03216                 -0.00021\n",
+      "10   6.19174         1.23835              1.23792                  0.00043\n",
+      "11   7.43008         1.48602              1.48561                  0.00040\n",
+      "12   8.91610         1.78322              1.78302                  0.00020\n",
+      "13  10.69932         2.13986              2.13990                 -0.00004\n",
+      "14  12.83918         2.56784              2.56816                 -0.00032\n",
+      "15  15.40702         3.08140              3.08161                 -0.00020\n",
+      "16  18.48843         3.69769              3.69764                  0.00004\n",
+      "17  22.18611         4.43722              4.43689                  0.00033\n",
+      "18  26.62333         5.32467              5.32402                  0.00065\n",
+      "19  31.94800         6.38960              6.39031                 -0.00071\n"
      ]
     },
     {
@@ -771,7 +642,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "id": "367434e3c1076341",
    "metadata": {
     "ExecuteTime": {
@@ -808,7 +679,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "id": "2cc792fe16f92e4b",
    "metadata": {
     "ExecuteTime": {
