--- a/01_main_problem_no_bounderys.ipynb
+++ b/01_main_problem_no_bounderys.ipynb
@@ -544,7 +544,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 24,
    "id": "de070fe2-16f3-40f1-8602-36aebfb3818a",
    "metadata": {
     "scrolled": true
@@ -732,7 +732,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 25,
    "id": "38bb6ae2-4899-447e-932e-73df4d710efc",
    "metadata": {},
    "outputs": [
@@ -741,34 +741,34 @@
      "output_type": "stream",
      "text": [
       "‼️Geladene Exceldaten\n",
-      "{'sigma_0': array([1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0],\n",
-      "      dtype=int64), 'delta_epsilon': array([0.0005, 0.    , 0.    , 0.    , 0.    , 0.    , 0.    , 0.    ,\n",
+      "{'sigma_0': array([1500,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,\n",
+      "          0,    0,    0,    0,    0,    0,    0,    0,    0], dtype=int64), 'delta_epsilon': array([0.0005, 0.    , 0.    , 0.    , 0.    , 0.    , 0.    , 0.    ,\n",
       "       0.    , 0.    , 0.    , 0.    , 0.    , 0.    , 0.    , 0.    ,\n",
-      "       0.    , 0.    , 0.    , 0.    ]), 'sigma_1': array([0.2, 0. , 0. , 0. , 0. , 0. , 0. , 0. , 0. , 0. , 0. , 0. , 0. ,\n",
-      "       0. , 0. , 0. , 0. , 0. , 0. , 0. ])}\n",
+      "       0.    , 0.    , 0.    , 0.    ]), 'sigma_1': array([300,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,\n",
+      "         0,   0,   0,   0,   0,   0,   0], dtype=int64)}\n",
       "Data-Loss bis sigma_19\n",
       "\n",
       "    sigma_t  True sigma_t+1  Predicted sigma_t+1  Loss (True - Predicted)\n",
-      "0         1             0.2              0.20023                 -0.00023\n",
-      "1         0             0.0              0.03861                 -0.03861\n",
-      "2         0             0.0              0.03861                 -0.03861\n",
-      "3         0             0.0              0.03861                 -0.03861\n",
-      "4         0             0.0              0.03861                 -0.03861\n",
-      "5         0             0.0              0.03861                 -0.03861\n",
-      "6         0             0.0              0.03861                 -0.03861\n",
-      "7         0             0.0              0.03861                 -0.03861\n",
-      "8         0             0.0              0.03861                 -0.03861\n",
-      "9         0             0.0              0.03861                 -0.03861\n",
-      "10        0             0.0              0.03861                 -0.03861\n",
-      "11        0             0.0              0.03861                 -0.03861\n",
-      "12        0             0.0              0.03861                 -0.03861\n",
-      "13        0             0.0              0.03861                 -0.03861\n",
-      "14        0             0.0              0.03861                 -0.03861\n",
-      "15        0             0.0              0.03861                 -0.03861\n",
-      "16        0             0.0              0.03861                 -0.03861\n",
-      "17        0             0.0              0.03861                 -0.03861\n",
-      "18        0             0.0              0.03861                 -0.03861\n",
-      "19        0             0.0              0.03861                 -0.03861\n"
+      "0      1500             300           299.636871                  0.36313\n",
+      "1         0               0             0.038610                 -0.03861\n",
+      "2         0               0             0.038610                 -0.03861\n",
+      "3         0               0             0.038610                 -0.03861\n",
+      "4         0               0             0.038610                 -0.03861\n",
+      "5         0               0             0.038610                 -0.03861\n",
+      "6         0               0             0.038610                 -0.03861\n",
+      "7         0               0             0.038610                 -0.03861\n",
+      "8         0               0             0.038610                 -0.03861\n",
+      "9         0               0             0.038610                 -0.03861\n",
+      "10        0               0             0.038610                 -0.03861\n",
+      "11        0               0             0.038610                 -0.03861\n",
+      "12        0               0             0.038610                 -0.03861\n",
+      "13        0               0             0.038610                 -0.03861\n",
+      "14        0               0             0.038610                 -0.03861\n",
+      "15        0               0             0.038610                 -0.03861\n",
+      "16        0               0             0.038610                 -0.03861\n",
+      "17        0               0             0.038610                 -0.03861\n",
+      "18        0               0             0.038610                 -0.03861\n",
+      "19        0               0             0.038610                 -0.03861\n"
      ]
     },
     {
