--- a/01_main_problem_no_bounderys.ipynb
+++ b/01_main_problem_no_bounderys.ipynb
@@ -723,16 +723,12 @@
    "id": "b979e1d6-7feb-442b-b59f-afe2593f58d6",
    "metadata": {},
    "source": [
-    "# Fazit\n",
-    "\n",
-    "Das Problem dieser Implementation ist, dass wir das Modell mit 20 Inpt Parametern gefüttert haben, die daraufhin auch immer erneut gefordert werden. Es ist also nicht möglich einen einzelnen Wert zu bestimmen, da das Modell nun weitere 19 Parameter braucht, um weitere Ausgaben zu generieren. <br>\n",
-    "\n",
-    "Im folgenden wird dargestellt, wie es aussehen würde, wenn man bspw. das Modell mit einem Tensor füttert, der nur den ersten Wert mit einem Wert gefüllt hat (Rest 0)."
+    "# Testdaten (1 Input-Wert) $\\Delta\\epsilon=0,0005$"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 51,
    "id": "38bb6ae2-4899-447e-932e-73df4d710efc",
    "metadata": {},
    "outputs": [
@@ -774,7 +770,7 @@
     {
      "data": {
       "text/markdown": [
-       "![Prediction vs True Solution](./graph/visual_prediction-vs-truesolution_comp.png)<br>**Hinweis:** Datenpunkte liegen sehr nahe beieinander."
+       "# Visualisierung (1 Input-Wert) $\\Delta\\epsilon=0,0005$ <br> ![Prediction vs True Solution](./graph/visual_prediction-vs-truesolution_comp.png)"
       ],
       "text/plain": [
        "<IPython.core.display.Markdown object>"
@@ -829,16 +825,238 @@
     "else:\n",
     "    print(\"Fehler: `data_dict` oder `sigma_1_pred` ist nicht definiert!\")\n",
     "\n",
-    "display(Markdown('![Prediction vs True Solution](./graph/visual_prediction-vs-truesolution_comp.png)<br>**Hinweis:** Datenpunkte liegen sehr nahe beieinander.'))"
+    "display(Markdown(r'# Visualisierung (1 Input-Wert) $\\Delta\\epsilon=0,0005$ <br> ![Prediction vs True Solution](./graph/visual_prediction-vs-truesolution_comp.png)'))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "90bff797-ce23-479e-bfa6-ee6607f42cf0",
+   "metadata": {},
+   "source": [
+    "# Testwerte (2 Input-Wert) $\\Delta\\epsilon=0,0005$"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 54,
    "id": "eb148e33-5cce-4311-91f3-f4e11197f8ee",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "‼️Geladene Exceldaten\n",
+      "{'sigma_0': array([1500,    0,    0,    0,    0,    0,    0,    0,    0,  854,    0,\n",
+      "          0,    0,    0,    0,    0,    0,    0,    0,    0], dtype=int64), 'delta_epsilon': array([0.0005, 0.    , 0.    , 0.    , 0.    , 0.    , 0.    , 0.    ,\n",
+      "       0.    , 0.0005, 0.    , 0.    , 0.    , 0.    , 0.    , 0.    ,\n",
+      "       0.    , 0.    , 0.    , 0.    ]), 'sigma_1': array([300. ,   0. ,   0. ,   0. ,   0. ,   0. ,   0. ,   0. ,   0. ,\n",
+      "       170.8,   0. ,   0. ,   0. ,   0. ,   0. ,   0. ,   0. ,   0. ,\n",
+      "         0. ,   0. ])}\n",
+      "Data-Loss bis sigma_19\n",
+      "\n",
+      "    sigma_t  True sigma_t+1  Predicted sigma_t+1  Loss (True - Predicted)\n",
+      "0      1500           300.0           299.636871                  0.36313\n",
+      "1         0             0.0             0.038610                 -0.03861\n",
+      "2         0             0.0             0.038610                 -0.03861\n",
+      "3         0             0.0             0.038610                 -0.03861\n",
+      "4         0             0.0             0.038610                 -0.03861\n",
+      "5         0             0.0             0.038610                 -0.03861\n",
+      "6         0             0.0             0.038610                 -0.03861\n",
+      "7         0             0.0             0.038610                 -0.03861\n",
+      "8         0             0.0             0.038610                 -0.03861\n",
+      "9       854           170.8           170.596603                  0.20340\n",
+      "10        0             0.0             0.038610                 -0.03861\n",
+      "11        0             0.0             0.038610                 -0.03861\n",
+      "12        0             0.0             0.038610                 -0.03861\n",
+      "13        0             0.0             0.038610                 -0.03861\n",
+      "14        0             0.0             0.038610                 -0.03861\n",
+      "15        0             0.0             0.038610                 -0.03861\n",
+      "16        0             0.0             0.038610                 -0.03861\n",
+      "17        0             0.0             0.038610                 -0.03861\n",
+      "18        0             0.0             0.038610                 -0.03861\n",
+      "19        0             0.0             0.038610                 -0.03861\n"
+     ]
+    },
+    {
+     "data": {
+      "text/markdown": [
+       "# Visualisierung (2 Input-Wert) $\\Delta\\epsilon=0,0005$<br>![Prediction vs True Solution](./graph/visual_prediction-vs-truesolution_comp.png)<br>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Markdown object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "new_data = extract_excel(file_path=\"files/oedometer/oedo_trainingsdata_compare2.xlsx\", sheet_name=\"Res\", selected_columns=[1, 3, 5], row_start_range=0)\n",
+    "\n",
+    "# Erstelle die Eingabedaten als LabelTensor für das trainierte Modell\n",
+    "input_data = LabelTensor(torch.tensor(\n",
+    "    np.column_stack((new_data['sigma_0'], new_data['delta_epsilon'])), dtype=torch.float\n",
+    "), ['sigma_0', 'delta_epsilon'])\n",
+    "\n",
+    "# Model-Vorhersage für sigma_1 berechnen\n",
+    "sigma_1_pred = pinn(input_data).detach().numpy()\n",
+    "\n",
+    "# Plot der wahren vs. vorhergesagten Werte\n",
+    "plt.figure(figsize=(10, 5))\n",
+    "\n",
+    "# True Solution als Punkte darstellen\n",
+    "plt.scatter(new_data['sigma_0'][0:max_i], new_data['sigma_1'][0:max_i], label=\"True Solution (sigma_1)\", color='blue', marker='o')\n",
+    "# NN Prediction als Linie darstellen\n",
+    "plt.scatter(new_data['sigma_0'][0:max_i], sigma_1_pred[0:max_i], label=\"NN Prediction (sigma_1)\", linestyle='solid', color='red')\n",
+    "\n",
+    "plt.xlabel(\"sigma_0\")\n",
+    "plt.ylabel(\"sigma_1\")\n",
+    "plt.title(f\"Prediction vs. True Solution (delta_epsilon=0.0005, max_i={str(max_i-1)})\")\n",
+    "plt.legend()\n",
+    "plt.grid()\n",
+    "plt.savefig('./graph/visual_prediction-vs-truesolution_comp.png')\n",
+    "\n",
+    "# Überprüfen, ob die notwendigen Variablen existieren\n",
+    "if 'data_dict' in globals() and 'sigma_1_pred' in globals():\n",
+    "    # Erstelle eine Tabelle für die übersichtliche Darstellung\n",
+    "    data_loss_table = pd.DataFrame({\n",
+    "        \"sigma_t\": np.round(new_data[\"sigma_0\"][0:max_i], 5),\n",
+    "        \"True sigma_t+1\": np.round(new_data[\"sigma_1\"][0:max_i], 5),\n",
+    "        \"Predicted sigma_t+1\": np.round(sigma_1_pred[0:max_i].flatten(), 5),\n",
+    "        \"Loss (True - Predicted)\": np.round(new_data[\"sigma_1\"][0:max_i] - sigma_1_pred[0:max_i].flatten(), 5)\n",
+    "    })\n",
+    "\n",
+    "    pd.set_option('display.max_rows', None)  # Keine Begrenzung der Zeilen\n",
+    "    pd.set_option('display.max_columns', None)  # Keine Begrenzung der Spalten\n",
+    "    pd.set_option('display.width', 1000)  # Breite für bessere Lesbarkeit\n",
+    "\n",
+    "    print(f'Data-Loss bis sigma_{str(max_i-1)}\\n')\n",
+    "    print(data_loss_table)\n",
+    "else:\n",
+    "    print(\"Fehler: `data_dict` oder `sigma_1_pred` ist nicht definiert!\")\n",
+    "\n",
+    "display(Markdown(r'# Visualisierung (2 Input-Wert) $\\Delta\\epsilon=0,0005$<br>![Prediction vs True Solution](./graph/visual_prediction-vs-truesolution_comp.png)<br>'))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "74d66b7b-df39-4ffb-996e-42197cccae2c",
+   "metadata": {},
+   "source": [
+    "# Testwerte (2 Input-Wert) $\\Delta\\epsilon=0,001$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "id": "b0d968d0-ed7a-4ea2-b613-23935a7b789b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "‼️Geladene Exceldaten\n",
+      "{'sigma_0': array([1500,    0,    0,    0,    0,    0,    0,    0,    0,  854,    0,\n",
+      "          0,    0,    0,    0,    0,    0,    0,    0,    0], dtype=int64), 'delta_epsilon': array([0.001, 0.   , 0.   , 0.   , 0.   , 0.   , 0.   , 0.   , 0.   ,\n",
+      "       0.001, 0.   , 0.   , 0.   , 0.   , 0.   , 0.   , 0.   , 0.   ,\n",
+      "       0.   , 0.   ]), 'sigma_1': array([600. ,   0. ,   0. ,   0. ,   0. ,   0. ,   0. ,   0. ,   0. ,\n",
+      "       341.6,   0. ,   0. ,   0. ,   0. ,   0. ,   0. ,   0. ,   0. ,\n",
+      "         0. ,   0. ])}\n",
+      "Data-Loss bis sigma_19\n",
+      "\n",
+      "    sigma_t  True sigma_t+1  Predicted sigma_t+1  Loss (True - Predicted)\n",
+      "0      1500           600.0           299.636871                300.36313\n",
+      "1         0             0.0             0.038610                 -0.03861\n",
+      "2         0             0.0             0.038610                 -0.03861\n",
+      "3         0             0.0             0.038610                 -0.03861\n",
+      "4         0             0.0             0.038610                 -0.03861\n",
+      "5         0             0.0             0.038610                 -0.03861\n",
+      "6         0             0.0             0.038610                 -0.03861\n",
+      "7         0             0.0             0.038610                 -0.03861\n",
+      "8         0             0.0             0.038610                 -0.03861\n",
+      "9       854           341.6           170.596573                171.00343\n",
+      "10        0             0.0             0.038610                 -0.03861\n",
+      "11        0             0.0             0.038610                 -0.03861\n",
+      "12        0             0.0             0.038610                 -0.03861\n",
+      "13        0             0.0             0.038610                 -0.03861\n",
+      "14        0             0.0             0.038610                 -0.03861\n",
+      "15        0             0.0             0.038610                 -0.03861\n",
+      "16        0             0.0             0.038610                 -0.03861\n",
+      "17        0             0.0             0.038610                 -0.03861\n",
+      "18        0             0.0             0.038610                 -0.03861\n",
+      "19        0             0.0             0.038610                 -0.03861\n"
+     ]
+    },
+    {
+     "data": {
+      "text/markdown": [
+       "# Visualisierung (2 Input-Wert) $\\Delta\\epsilon=0,001$ <br> ![Prediction vs True Solution](./graph/visual_prediction-vs-truesolution_comp.png)"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Markdown object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "new_data = extract_excel(file_path=\"files/oedometer/oedo_trainingsdata_compare3.xlsx\", sheet_name=\"Res\", selected_columns=[1, 3, 5], row_start_range=0)\n",
+    "\n",
+    "# Erstelle die Eingabedaten als LabelTensor für das trainierte Modell\n",
+    "input_data = LabelTensor(torch.tensor(\n",
+    "    np.column_stack((new_data['sigma_0'], new_data['delta_epsilon'])), dtype=torch.float\n",
+    "), ['sigma_0', 'delta_epsilon'])\n",
+    "\n",
+    "# Model-Vorhersage für sigma_1 berechnen\n",
+    "sigma_1_pred = pinn(input_data).detach().numpy()\n",
+    "\n",
+    "# Plot der wahren vs. vorhergesagten Werte\n",
+    "plt.figure(figsize=(10, 5))\n",
+    "\n",
+    "# True Solution als Punkte darstellen\n",
+    "plt.scatter(new_data['sigma_0'][0:max_i], new_data['sigma_1'][0:max_i], label=\"True Solution (sigma_1)\", color='blue', marker='o')\n",
+    "# NN Prediction als Linie darstellen\n",
+    "plt.scatter(new_data['sigma_0'][0:max_i], sigma_1_pred[0:max_i], label=\"NN Prediction (sigma_1)\", linestyle='solid', color='red')\n",
+    "\n",
+    "plt.xlabel(\"sigma_0\")\n",
+    "plt.ylabel(\"sigma_1\")\n",
+    "plt.title(f\"Prediction vs. True Solution (delta_epsilon=0.0005, max_i={str(max_i-1)})\")\n",
+    "plt.legend()\n",
+    "plt.grid()\n",
+    "plt.savefig('./graph/visual_prediction-vs-truesolution_comp.png')\n",
+    "\n",
+    "# Überprüfen, ob die notwendigen Variablen existieren\n",
+    "if 'data_dict' in globals() and 'sigma_1_pred' in globals():\n",
+    "    # Erstelle eine Tabelle für die übersichtliche Darstellung\n",
+    "    data_loss_table = pd.DataFrame({\n",
+    "        \"sigma_t\": np.round(new_data[\"sigma_0\"][0:max_i], 5),\n",
+    "        \"True sigma_t+1\": np.round(new_data[\"sigma_1\"][0:max_i], 5),\n",
+    "        \"Predicted sigma_t+1\": np.round(sigma_1_pred[0:max_i].flatten(), 5),\n",
+    "        \"Loss (True - Predicted)\": np.round(new_data[\"sigma_1\"][0:max_i] - sigma_1_pred[0:max_i].flatten(), 5)\n",
+    "    })\n",
+    "\n",
+    "    pd.set_option('display.max_rows', None)  # Keine Begrenzung der Zeilen\n",
+    "    pd.set_option('display.max_columns', None)  # Keine Begrenzung der Spalten\n",
+    "    pd.set_option('display.width', 1000)  # Breite für bessere Lesbarkeit\n",
+    "\n",
+    "    print(f'Data-Loss bis sigma_{str(max_i-1)}\\n')\n",
+    "    print(data_loss_table)\n",
+    "else:\n",
+    "    print(\"Fehler: `data_dict` oder `sigma_1_pred` ist nicht definiert!\")\n",
+    "\n",
+    "display(Markdown(r'# Visualisierung (2 Input-Wert) $\\Delta\\epsilon=0,001$ <br> ![Prediction vs True Solution](./graph/visual_prediction-vs-truesolution_comp.png)'))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4409ad12-42d8-40a2-bff3-bdb2b5dd40d7",
+   "metadata": {},
+   "source": [
+    "Logischerweise hat er für den Parameter $\\Delta\\epsilon$ keine korrekte Berechnungs vorgenommen. Trotzdem wollte ich es mal darstellen"
+   ]
   }
  ],
  "metadata": {
